[package]
name = "lunarity-ast"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
repository = "https://github.com/paritytech/lunarity"
description = "Abstract Syntax Tree for the Solidity language"

[dependencies]
toolshed = "0.4"

[dev-dependencies]
pretty_assertions = "0.4"
