[package]
name = "lunarity-lexer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
repository = "https://github.com/paritytech/lunarity"
description = "A high performance Solidity language Lexer"

[dependencies]
toolshed = "0.4"
logos = { path = "../../logos/logos" }
