[package]
name = "lunarity-lexer"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
repository = "https://github.com/paritytech/lunarity"
description = "A high performance Solidity language Lexer"

[dependencies]
logos = { version = "0.7.6", features = ["nul_term_source"] }
