[package]
name = "lunarity"
version = "0.1.0"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/maciejhirsz/lunarity"

[dependencies]
lunarity-ast = { path = "../ast" }
lunarity-lexer = { path = "../lexer" }
lunarity-parser = { path = "../parser" }
toolshed = "0.4"

[dev.dependencies]