[package]
name = "lunarity"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
repository = "https://github.com/paritytech/lunarity"

[dependencies]
lunarity-ast = { path = "../ast" }
lunarity-lexer = { path = "../lexer" }
lunarity-parser = { path = "../parser" }

[dev-dependencies]
toolshed = "0.4"
