[package]
name = "lunarity"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
repository = "https://github.com/paritytech/lunarity"

[dependencies]
lunarity-ast = "0.2"
# lunarity-lexer = "0.2"
# lunarity-parser = "0.2"
lunarity-lexer = { path = "../lexer" }
lunarity-parser = { path = "../parser" }

[dev-dependencies]
toolshed = "0.6"
