[package]
name = "lunarity-parser"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
repository = "https://github.com/paritytech/lunarity"
description = "A high performance Solidity language Parser"

[dependencies]
toolshed = "0.4"
lunarity-lexer = { path ="../lexer" }
lunarity-ast = { path = "../ast" }

[dev-dependencies]
pretty_assertions = "0.4"
