[package]
name = "lunarity-parser"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
repository = "https://github.com/paritytech/lunarity"
description = "A high performance Solidity language Parser"

[dependencies]
toolshed = "0.6"
# lunarity-lexer = "0.2.1"
lunarity-lexer = { path = "../lexer" }
lunarity-ast = "0.2"

[dev-dependencies]
pretty_assertions = "0.5"
